--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file("my-release-key.keystore")
+                storePassword "changeit"
+                keyAlias "my-key-alias"
+                keyPassword "changeit"
+            }
+        }
+    }
     splits {
         abi {
             reset()
@@ -116,6 +126,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
